# unbias_me

./: .gitignore  README.md  critique_llms.ipynb  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
CriticEval/inference/: mistral_finetune_facts.ipynb  requirements.txt
critic_eval/critic_bench/: requirements.txt
critic_eval/inference/.ipynb_checkpoints/: internlm2-checkpoint.py
models/: analyze_content.py  app.py  argumentative_sentences_finetuning.jsonl  argumentative_sentences_finetuning_full.jsonl  atomization_critical_analysis_finetuning_50.jsonl  critical_analysis_finetuning.jsonl  critical_analysis_finetuning_50.jsonl  openai.ipynb  parsing_web_page.py  training_data.jsonl
unbiasme-extension/: content.js  manifest.json  popup.html  popup.js
