[tool.poetry]
name = "unbias-me"
version = "0.1.0"
description = ""
authors = ["varshini2305 <varshinibalaji2305@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"
httpcore = "1.0.3"
ipdb = "0.13.13"
latex2sympy2 = "1.9.1"
numpy = "1.24.3"
openai = "1.12.0"
requests = "^2.32.3"
scipy = "1.12.0"
tabulate = "0.9.0"
tqdm = "^4.67.1"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.42.1"}
torch = "^2.6.0"
datasets = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
