[tool.poetry]
package-mode = false
name = "unbias-me"
version = "0.1.0"
description = ""
authors = ["varshini2305 <varshinibalaji2305@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpcore = "1.0.3"
ipdb = "0.13.13"
latex2sympy2 = "1.9.1"
numpy = "1.24.3"
openai = "1.12.0"
requests = "^2.32.3"
scipy = "1.12.0"
tabulate = "0.9.0"
tqdm = "^4.67.1"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.42.1"}
datasets = "^3.3.2"
transformers = "4.49.0"
fschat = "^0.2.36"
torch = "^2.6.0"
accelerate = "^1.4.0"
psutil = "^7.0.0"
sentencepiece = "^0.2.0"
einops = "^0.8.1"
ipykernel = "^6.29.5"
huggingface-hub = "^0.29.1"
ipywidgets = "^8.1.5"
bitsandbytes = "^0.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
